Fest: add the recommendation section and converted images to png

--- a/index.html
+++ b/index.html
@@ -92,7 +92,6 @@
   	</div>
   
 	<div class="main_2">
-		
 		<section id="center" class="center_home">
 			<div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
 				<div class="carousel-inner">
@@ -150,51 +149,269 @@
 				</div>
 			</div>
 		</section>
-		
-		
     </div>
+</div>
 
-	<!-- 
-	<div class="main_3 position-absolute w-100">
-		<section id="book_o">
-			<div class="container-xl">
-				<div class="row book_1 p-4 px-4 shadow_box bg-white rounded_30">
-					<div class="col-md-3">
-						<div class="book_1i">
-							<input class="form-control bg-light border-0 rounded_30" type="text" placeholder="Startng From">
-						</div>
-					</div>
+<!-- Adventisment -->
 
-					<div class="col-md-3">
-						<div class="book_1i">
-							<input class="form-control bg-light border-0 rounded_30" type="text" placeholder="Going To">
-						</div>
-					</div>
-
-					<div class="col-md-3">
-						<div class="book_1i">
-							<input class="form-control bg-light border-0 rounded_30" id="example-date" type="date" name="date">
-						</div>
-					</div>
-
-					<div class="col-md-3">
-						<div class="book_1i">
-							<h6 class="mb-0"><a class="button d-block text-center fw-bold" href="#">Search</a></h6>
+<section id="offer" class="p_3">
+	<div class="container-xl">
+		<div class="row offer_2">
+			<div class="col-md-6">
+				<div class="offer_2m">
+					<div class="offer_2m1 position-relative">
+						<div class="offer_2mi">
+							<img src="img/1a.png"  alt="abc" class="w-100">
 						</div>
 					</div>
 				</div>
 			</div>
-		</section>
+
+			<div class="col-md-6">
+				<div class="offer_2m">
+					<div class="offer_2m1 position-relative">
+						<div class="offer_2mi">
+							<img src="img/2b.png"  alt="abc" class="w-100">
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
 	</div>
-	-->
+</section>
 
-</div>
-
-<!-- -->
-
+<!-- Recommend-->
 <section id="offer" class="p_3">
 	<div class="container-xl">
-	<!--
+		<div class="row offer_1 text-center mb-4">
+			<div class="col-md-12">
+				<h2 class="mt-2">Recommended for you</h2>
+			</div>
+		</div>
+
+		<div class="row offer_2">
+			<div class="col-md-3">
+				<div class="offer_2m">
+					<div class="offer_2m1 position-relative">
+						<div class="offer_2mi">
+						<img src="img/cape.png"  alt="abc" class="w-100">
+						</div>
+						<div class="offer_2mi2 position-absolute bottom-0 p-3 text-end w-100">
+							<span><a class="bg-white col_red fs-4 rounded-circle d-inline-block text-center" href="#"><i class="fa fa-heart"></i></a></span>
+						</div>
+					</div>
+
+					<div class="offer_2m2 p-4 shadow_box">
+						<p><i class="fa fa-map-marker"></i> Cape Town</span>
+					<h5><a href="#">
+						Cape Town Fast Deal: End of August MEGA FUN Trip
+					<span class="text-warning fs-6 ms-3">
+						<i class="fa fa-star"></i>
+						<i class="fa fa-star"></i>
+						<i class="fa fa-star"></i>
+						<i class="fa fa-star"></i>
+						<i class="fa fa-star"></i>
+					</span>
+					</a></h5>
+					<p class="mb-0">
+						From <strong>₦3,650,000</strong> 
+						<span class="pull-right">
+							<i class="fa fa-clock-o"></i> 
+							8 days
+						</span>
+					</p>
+					</div>
+				</div>
+			</div>
+			
+			<div class="col-md-3">
+				<div class="offer_2m">
+					<div class="offer_2m1 position-relative">
+						<div class="offer_2mi">
+						<img src="img/qater.png"  alt="abc" class="w-100">
+						</div>
+						<div class="offer_2mi2 position-absolute bottom-0 p-3 text-end w-100">
+							<span><a class="bg-white col_red fs-4 rounded-circle d-inline-block text-center" href="#"><i class="fa fa-heart"></i></a></span>
+						</div>
+					</div>
+
+					<div class="offer_2m2 p-4 shadow_box">
+						<p><i class="fa fa-map-marker"></i> Seychelles and Qatar</span>
+					<h5><a href="#">
+						Group Trip to Seychelles and Qatar: UK Residents Welcome!
+					<span class="text-warning fs-6 ms-3">
+						<i class="fa fa-star"></i>
+						<i class="fa fa-star"></i>
+						<i class="fa fa-star"></i>
+						<i class="fa fa-star"></i>
+						<i class="fa fa-star"></i>
+					</span>
+					</a></h5>
+					<p class="mb-0">
+						From <strong>₦3,900,000</strong> 
+						<span class="pull-right">
+							<i class="fa fa-clock-o"></i> 
+							9 days
+						</span>
+					</p>
+					</div>
+				</div>
+			</div>
+
+
+			<div class="col-md-3">
+				<div class="offer_2m">
+					<div class="offer_2m1 position-relative">
+						<div class="offer_2mi">
+						<img src="img/doha.png"  alt="abc" class="w-100">
+						</div>
+						<div class="offer_2mi2 position-absolute bottom-0 p-3 text-end w-100">
+							<span><a class="bg-white col_red fs-4 rounded-circle d-inline-block text-center" href="#"><i class="fa fa-heart"></i></a></span>
+						</div>
+					</div>
+
+					<div class="offer_2m2 p-4 shadow_box">
+						<p><i class="fa fa-map-marker"></i>  Fairmont, Doha</span>
+					<h5><a href="#">
+						Fairmont Doha Summer Group Trip: Luxury for Less
+					<span class="text-warning fs-6 ms-3">
+						<i class="fa fa-star"></i>
+						<i class="fa fa-star"></i>
+						<i class="fa fa-star"></i>
+						<i class="fa fa-star"></i>
+						<i class="fa fa-star"></i>
+					</span>
+					</a></h5>
+					<p class="mb-0">
+						From <strong>₦3,150,000</strong> 
+						<span class="pull-right">
+							<i class="fa fa-clock-o"></i> 
+							8 days
+						</span>
+					</p>
+					</div>
+				</div>
+			</div>
+			
+			<div class="col-md-3">
+				<div class="offer_2m">
+					<div class="offer_2m1 position-relative">
+						<div class="offer_2mi">
+						<img src="img/france.png"  alt="abc" class="w-100">
+						</div>
+						<div class="offer_2mi1 position-absolute top-0 p-3">
+						<h6 class="d-inline-block text-white rounded_30 bg_red p-2 font_14 lh-1 px-4"> OFFER</h6><br>
+						<h5 class="d-inline-block text-white rounded_30 bg-dark p-2  lh-1 px-4"> <span class="text-decoration-line-through fs-6 me-2">₦6,700,000</span> ₦5,200,000</h5>
+						</div>
+						<div class="offer_2mi2 position-absolute bottom-0 p-3 text-end w-100">
+							<span><a class="bg-white col_red fs-4 rounded-circle d-inline-block text-center" href="#"><i class="fa fa-heart"></i></a></span>
+						</div>
+					</div>
+					
+					<div class="offer_2m2 p-4 shadow_box">
+						<p><i class="fa fa-map-marker"></i>  France and Greece</span>
+					<h5><a href="#">
+						12 DAYS OF FUN IN FRANCE AND GREECE
+					<span class="text-warning fs-6 ms-3">
+						<i class="fa fa-star"></i>
+						<i class="fa fa-star"></i>
+						<i class="fa fa-star"></i>
+						<i class="fa fa-star"></i>
+						<i class="fa fa-star-half-o"></i>
+					</span>
+					</a></h5>
+					<p class="mb-0">
+						From <strong>₦5,200,000</strong> 
+						<span class="pull-right">
+							<i class="fa fa-clock-o"></i> 
+							14 days
+						</span>
+					</p>
+					</div>
+				</div>
+			</div>
+		</div>
+<br/>
+		<!--other-->
+		<div class="row offer_2">
+			<div class="col-md-3">
+				<div class="offer_2m">
+					<div class="offer_2m1 position-relative">
+						<div class="offer_2mi">
+						<img src="img/mala.png"  alt="abc" class="w-100">
+						</div>
+						<div class="offer_2mi2 position-absolute bottom-0 p-3 text-end w-100">
+							<span><a class="bg-white col_red fs-4 rounded-circle d-inline-block text-center" href="#"><i class="fa fa-heart"></i></a></span>
+						</div>
+					</div>
+
+					<div class="offer_2m2 p-4 shadow_box">
+						<p><i class="fa fa-map-marker"></i>   Malaysia</span>
+					<h5><a href="#">
+						Malaysia and Doha Tour Package
+					<span class="text-warning fs-6 ms-3">
+						<i class="fa fa-star"></i>
+						<i class="fa fa-star"></i>
+						<i class="fa fa-star"></i>
+						<i class="fa fa-star"></i>
+						<i class="fa fa-star"></i>
+					</span>
+					</a></h5>
+					<p class="mb-0">
+						From <strong>₦3,995,000</strong> 
+						<span class="pull-right">
+							<i class="fa fa-clock-o"></i> 
+							10 days
+						</span>
+					</p>
+					</div>
+				</div>
+			</div>
+			
+			<div class="col-md-3">
+				<div class="offer_2m">
+					<div class="offer_2m1 position-relative">
+						<div class="offer_2mi">
+						<img src="img/egypt.png"  alt="abc" class="w-100">
+						</div>
+						<div class="offer_2mi1 position-absolute top-0 p-3">
+						<h6 class="d-inline-block text-white rounded_30 bg_red p-2 font_14 lh-1 px-4"><strong>Sold Out</strong></h6><br>
+						</div>
+						<div class="offer_2mi2 position-absolute bottom-0 p-3 text-end w-100">
+							<span><a class="bg-white col_red fs-4 rounded-circle d-inline-block text-center" href="#"><i class="fa fa-heart"></i></a></span>
+						</div>
+					</div>
+					
+					<div class="offer_2m2 p-4 shadow_box">
+						<p><i class="fa fa-map-marker"></i> Egypt</span>
+					<h5><a href="#">
+						EGYPT Tour Package (CAIRO & AIN SOKHNA)
+					<span class="text-warning fs-6 ms-3">
+						<i class="fa fa-star"></i>
+						<i class="fa fa-star"></i>
+						<i class="fa fa-star"></i>
+						<i class="fa fa-star"></i>
+						<i class="fa fa-star-half-o"></i>
+					</span>
+					</a></h5>
+					<p class="mb-0">
+						From <strong> ₦2,450,000</strong> 
+						<span class="pull-right">
+							<i class="fa fa-clock-o"></i> 
+							8 days
+						</span>
+					</p>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+</section>
+
+
+<!-- -->
+<section id="pack" class="p_3">
+	<div class="container-xl">
 		<div class="row offer_1 text-center mb-4">
 			<div class="col-md-12">
 				<h6 class="d-inline-block text-white rounded_30 bg_red p-3 font_14 lh-1 px-4">NEW OFFER</h6>
@@ -202,26 +419,47 @@
 				<p class="mb-0">Trips, experiences, and places. All in one service.</p>
 			</div>
 		</div>
-	-->
-		<div class="row offer_2">
+		<div class="row pack_1">
 			<div class="col-md-6">
-				<div class="offer_2m">
-					<div class="offer_2m1 position-relative">
-						<div class="offer_2mi">
-							<img src="img/2b.jpg"  alt="abc" class="w-100">
-						</div>
+				<div class="pack_1l position-relative shadow_box rounded_30">
+					<div class="pack_1l1">
+						<h4><a href="#">Tour of Shimala</a></h4>
+						<span class="text-warning fs-6">
+							<i class="fa fa-star"></i>
+							<i class="fa fa-star"></i>
+							<i class="fa fa-star"></i>
+							<i class="fa fa-star"></i>
+							<i class="fa fa-star"></i>
+						</span>
+						<p class="mt-2">Lorem Ipsum is simply dummy text of the printing and setting industry. Lorem Ipsum has been the industry's since....</p>
+						<h4 class="col_red"> <span class="text-decoration-line-through fs-6 me-2 text-muted">$330</span> $230</h4>
+						<h6 class="d-inline-block  fw-bold rounded_30 border_1 p-3  lh-1 px-4 mb-0 mt-2"> Coupon code: ECS23</h6>
+					</div>
+					<div class="pack_1l2 position-absolute top-0">
+						<img src="img/8.jpg" class="rounded_30" alt="abc">
 					</div>
 				</div>
 			</div>
 
 			<div class="col-md-6">
-				<div class="offer_2m">
-					<div class="offer_2m1 position-relative">
-						<div class="offer_2mi">
-							<img src="img/2b.jpg"  alt="abc" class="w-100">
-						</div>
-					</div>
+			<div class="pack_1l position-relative shadow_box rounded_30">
+				<div class="pack_1l1o">
+					<h4><a href="#">Tour of London</a></h4>
+					<span class="text-warning fs-6">
+				<i class="fa fa-star"></i>
+				<i class="fa fa-star"></i>
+				<i class="fa fa-star"></i>
+				<i class="fa fa-star"></i>
+				<i class="fa fa-star"></i>
+			</span>
+			<p class="mt-2">Lorem Ipsum is simply dummy text of the printing and setting industry. Lorem Ipsum has been the industry's since....</p>
+			<h4 class="col_red"> <span class="text-decoration-line-through fs-6 me-2 text-muted">$270</span> $210</h4>
+			<h6 class="d-inline-block  fw-bold rounded_30 border_1 p-3  lh-1 px-4 mb-0 mt-2"> Coupon code: ECT39</h6>
 				</div>
+				<div class="pack_1l2o position-absolute top-0">
+					<img src="img/9.jpg" class="rounded_30" alt="abc">
+				</div>
+			</div>
 			</div>
 		</div>
 	</div>
@@ -269,53 +507,7 @@ Sec</li>
 </div>
 </section>
 
-<!-- -->
-<section id="pack" class="p_3">
-<div class="container-xl">
-<div class="row pack_1">
-  <div class="col-md-6">
-   <div class="pack_1l position-relative shadow_box rounded_30">
-       <div class="pack_1l1">
-         <h4><a href="#">Tour of Shimala</a></h4>
-		 <span class="text-warning fs-6">
-    <i class="fa fa-star"></i>
-	<i class="fa fa-star"></i>
-	<i class="fa fa-star"></i>
-	<i class="fa fa-star"></i>
-	<i class="fa fa-star"></i>
-   </span>
-   <p class="mt-2">Lorem Ipsum is simply dummy text of the printing and setting industry. Lorem Ipsum has been the industry's since....</p>
-   <h4 class="col_red"> <span class="text-decoration-line-through fs-6 me-2 text-muted">$330</span> $230</h4>
-   <h6 class="d-inline-block  fw-bold rounded_30 border_1 p-3  lh-1 px-4 mb-0 mt-2"> Coupon code: ECS23</h6>
-      </div>
-	   <div class="pack_1l2 position-absolute top-0">
-        <img src="img/8.jpg" class="rounded_30" alt="abc">
-      </div>
-   </div>
-  </div>
-  <div class="col-md-6">
-   <div class="pack_1l position-relative shadow_box rounded_30">
-       <div class="pack_1l1o">
-         <h4><a href="#">Tour of London</a></h4>
-		 <span class="text-warning fs-6">
-    <i class="fa fa-star"></i>
-	<i class="fa fa-star"></i>
-	<i class="fa fa-star"></i>
-	<i class="fa fa-star"></i>
-	<i class="fa fa-star"></i>
-   </span>
-   <p class="mt-2">Lorem Ipsum is simply dummy text of the printing and setting industry. Lorem Ipsum has been the industry's since....</p>
-   <h4 class="col_red"> <span class="text-decoration-line-through fs-6 me-2 text-muted">$270</span> $210</h4>
-   <h6 class="d-inline-block  fw-bold rounded_30 border_1 p-3  lh-1 px-4 mb-0 mt-2"> Coupon code: ECT39</h6>
-      </div>
-	   <div class="pack_1l2o position-absolute top-0">
-        <img src="img/9.jpg" class="rounded_30" alt="abc">
-      </div>
-   </div>
-  </div>
-</div>
-</div>
-</section>
+
 
 <!-- -->
 <section id="disc">
