Fest: added the images for top destination

--- a/index.html
+++ b/index.html
@@ -449,7 +449,7 @@
 									Lebanon
 								</h1>
 							</div>
-							<img src="img/cape.png"  alt="abc" class="w-100 rounded ">
+							<img src="img/lebanon.png"  alt="abc" class="w-100 rounded ">
 						</div>
 					</div>
 				</div>
@@ -464,7 +464,7 @@
 									Accra
 								</h1>
 							</div>
-							<img src="img/cape.png"  alt="abc" class="w-100 rounded">
+							<img src="img/accra.png"  alt="abc" class="w-100 rounded">
 						</div>
 					</div>
 				</div>
@@ -479,7 +479,7 @@
 									Zanzibar
 								</h1>
 							</div>
-							<img src="img/cape.png"  alt="abc" class="w-100 rounded">
+							<img src="img/zanzibar.png"  alt="abc" class="w-100 rounded">
 						</div>
 					</div>
 				</div>
@@ -494,7 +494,7 @@
 									Egypt
 								</h1>
 							</div>
-							<img src="img/cape.png"  alt="abc" class="w-100 rounded">
+							<img src="img/egypt1.png"  alt="abc" class="w-100 rounded">
 						</div>
 					</div>
 				</div>
@@ -512,7 +512,7 @@
 									Qatar
 								</h1>
 							</div>
-							<img src="img/cape.png"  alt="abc" class="w-100 rounded">
+							<img src="img/doha.png"  alt="abc" class="w-100 rounded">
 						</div>
 					</div>
 				</div>
@@ -527,7 +527,7 @@
 									Tunisia
 								</h1>
 							</div>
-							<img src="img/cape.png"  alt="abc" class="w-100 rounded">
+							<img src="img/Tunisia.png"  alt="abc" class="w-100 rounded">
 						</div>
 					</div>
 				</div>
@@ -542,7 +542,7 @@
 									Doha
 								</h1>
 							</div>
-							<img src="img/cape.png"  alt="abc" class="w-100 rounded">
+							<img src="img/mala.png"  alt="abc" class="w-100 rounded">
 						</div>
 					</div>
 				</div>
@@ -557,7 +557,7 @@
 									Namibia
 								</h1>
 							</div>
-							<img src="img/cape.png"  alt="abc" class="w-100 rounded">
+							<img src="img/namibia.png"  alt="abc" class="w-100 rounded">
 						</div>
 					</div>
 				</div>
