--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 				<ul class="navbar-nav mb-0 ms-auto">
 
 				<li class="nav-item">
-				<a class="nav-link " aria-current="page" href="main.html">Tour Packages</a>
+				<a class="nav-link " aria-current="page" href="tour.html">Tour Packages</a>
 				</li>
 
 				<li class="nav-item">
