Fest: polished the about us page

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 					<div class="carousel-item">
 						<img src="img/d.png" class="d-block w-100" alt="...">
 						<div class="carousel-caption d-md-block">
-							<h1>Asogworld Focuses On<br/> Customer Satisfaction</h1>
+							<h1>We Focuses On<br/> Customer Satisfaction</h1>
 
 							<p class="text-white fs-2">
 								We carefully consider our Services to Support each and every stage of your travel.
