Fest: added contact page

--- a/index.html
+++ b/index.html
@@ -179,8 +179,8 @@
 
 							
 							<ul class="mb-0 mt-4">
-								<li class="d-inline-block"><a class="button" href="#">About Us </a></li>
-								<li class="d-inline-block ms-2"><a class="button_1" href="#">Book an appointment</a></li>
+								<li class="d-inline-block"><a class="button" href="about.html">About Us </a></li>
+								<li class="d-inline-block ms-2"><a class="button_1" href="contact.html">Book an appointment</a></li>
 							</ul>
 							
 						</div>
