--- a/tour.html
+++ b/tour.html
@@ -68,6 +68,10 @@
 				<div class="collapse navbar-collapse" id="navbarSupportedContent">
 				<ul class="navbar-nav mb-0 ms-auto">
 
+					<li class="nav-item">
+						<a class="nav-link " aria-current="page" href="index.html">Home</a>
+						</li>
+
 				<li class="nav-item">
 				<a class="nav-link active" aria-current="page" href="tour.html">Tour Packages</a>
 				</li>
@@ -91,25 +95,7 @@
 					</ul>
 				</li>
 
-				<li class="nav-item dropdown">
-				<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-				Destinations
-				</a>
-					<ul class="dropdown-menu drop_1" aria-labelledby="navbarDropdown">
-						<li><a class="dropdown-item">Egypt</a></li>
-						<li><a class="dropdown-item border">Ghana</a></li>
-						<li><a class="dropdown-item border">Kenya</a></li>
-						<li><a class="dropdown-item border">Mombasa</a></li>
-						<li><a class="dropdown-item border">Morocco</a></li>
-						<li><a class="dropdown-item border">Namibia</a></li>
-						<li><a class="dropdown-item border">Nigeria</a></li>
-						<li><a class="dropdown-item border">Tanzania</a></li>
-						<li><a class="dropdown-item border">Tunisia</a></li>
-						<li><a class="dropdown-item border">Lebanon</a></li>
-						<li><a class="dropdown-item border">Qatar</a></li>
-						<li><a class="dropdown-item border-0">London</a></li>
-					</ul>
-				</li>
+			
 
 				</ul>
 				<ul class="navbar-nav mb-0 ms-auto nav_right">
