Fest: optimze the meta

--- a/index.html
+++ b/index.html
@@ -4,7 +4,13 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta property="og:title" content="Asogworld Travel & Tours">
+    <meta property="og:description" content="We are established to provide excellent travel and tour services to prospective clients families, individuals, coporate organization.">
+    <meta property="og:url" content="https://www.asogworldtravels.com.ng/">
+    <meta property="og:image" content="https://www.asogworldtravels.com.ng/img/100.png">
+
 	<title>Asogworld Travel and Tours</title>
+	<link rel="icon" href="img/1a.png" type="image/png">
 	<link href="css/bootstrap.min.css" rel="stylesheet" >
 	<link href="css/font-awesome.min.css" rel="stylesheet" >
 	<link href="css/global.css" rel="stylesheet">
