--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,10 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta property="og:title" content="Asogworld Travel & Tours">
+    <meta property="og:description" content="We are established to provide excellent travel and tour services to prospective clients families, individuals, coporate organization.">
+    <meta property="og:url" content="https://www.asogworldtravels.com.ng/">
+    <meta property="og:image" content="https://www.asogworldtravels.com.ng/img/100.png">
 	<title>Asogworld Travels and Tour</title>
 	<link href="css/bootstrap.min.css" rel="stylesheet" >
 	<link href="css/font-awesome.min.css" rel="stylesheet" >
@@ -147,7 +151,7 @@
 					<div class="col-md-10 col-10">
 						<div class="contact_2lir">
 							<h6>PHONE</h6>
-							<h5 class="mb-0">+234 0810 881 3145</h5>
+							<h5 class="mb-0">+234 0813-447-0225</h5>
 						</div>
 					</div>
 				</div>
@@ -160,7 +164,7 @@
 			<div class="col-md-10 col-10">
 			<div class="contact_2lir">
 				<h6>FAX</h6>
-				<h5 class="mb-0">+234 0810 881 3145</h5>
+				<h5 class="mb-0">+234 0813-447-0225</h5>
 			</div>
 			</div>
 			</div>
@@ -186,7 +190,7 @@
 			<div class="col-md-10 col-10">
 			<div ="contact_2lir">
 				<h6>EMAIL</h6>
-				<h5 class="mb-0">info@gmail.com</h5>
+				<h5 class="mb-0">asogworldtravels@gmail.com</h5>
 			</div>
 			</div>
 			</div>
@@ -327,8 +331,8 @@ to the expert planning and support from this tour agency. We felt safe, comforta
 								<h3 class="mb-4"><a class="fs-3 text-dark" href="index.html"><i class="fa fa-plane align-middle me-1 col_red"></i> Asogworld Travel & Tours </a></h3>
 								<p class="text-dark-50">Connecting you with the world.</p>
 								<p class="text-dark-50"><i class="fa fa-map-marker col_red me-1"></i> Suit FF25 Anafara Plaza, 1st Avenue, opp. Oando Filling Station, Gwarinpa, Abuja.</p>
-								<p class="text-dark-50"><i class="fa fa-phone col_red me-1"></i>  +234  0810 881 3145</p>
-								<p class="text-dark-50 mb-0"><i class="fa fa-envelope col_red me-1"></i> info@gmail.com</p>
+								<p class="text-dark-50"><i class="fa fa-phone col_red me-1"></i>  +234 0813-447-0225</p>
+								<p class="text-dark-50 mb-0"><i class="fa fa-envelope col_red me-1"></i> asogworldtravels@gmail.com</p>
 							</div>
 						</div>
 
