--- a/index.html
+++ b/index.html
@@ -4,20 +4,63 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+
+	<!-- SEO Meta Tags -->
+	<meta name="description" content="Asogworld Travel & Tours - Providing excellent travel and tour services to families, individuals, and corporate organizations.">
+	<meta name="keywords" content="Travel, Tours, Asogworld, Corporate Travel, Family Travel, Travel Services">
+	<meta name="author" content="Asogworld Travel & Tours">
+	<meta name="robots" content="index, follow">
+
+<!-- Open Graph Meta Tags for Social Media -->
 	<meta property="og:title" content="Asogworld Travel & Tours">
     <meta property="og:description" content="We are established to provide excellent travel and tour services to prospective clients families, individuals, coporate organization.">
     <meta property="og:url" content="https://www.asogworldtravels.com.ng/">
     <meta property="og:image" content="https://www.asogworldtravels.com.ng/img/100.png">
+	<meta property="og:type" content="website">
+
+
+	<!-- Twitter Card Meta Tags -->
+	<meta name="twitter:card" content="summary_large_image">
+	<meta name="twitter:title" content="Asogworld Travel & Tours">
+	<meta name="twitter:description" content="We are established to provide excellent travel and tour services to prospective clients, families, individuals, and corporate organizations.">
+	<meta name="twitter:image" content="https://www.asogworldtravels.com.ng/img/100.png">
+	<meta name="twitter:site" content="@asogworld">
+
+	<!-- Favicon -->
+	<link rel="icon" href="img/1a.png" type="image/png">
 
 	<title>Asogworld Travel and Tours</title>
-	<link rel="icon" href="img/1a.png" type="image/png">
+
+		<!-- CSS Links -->
 	<link href="css/bootstrap.min.css" rel="stylesheet" >
 	<link href="css/font-awesome.min.css" rel="stylesheet" >
 	<link href="css/global.css" rel="stylesheet">
 	<link href="css/index.css" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:opsz,wght@6..12,500&display=swap" rel="stylesheet">
+
+		<!-- JS Scripts -->
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 	<script src="js/bootstrap.bundle.min.js"></script>
+
+	<script type="application/ld+json">
+		{
+		  "@context": "https://schema.org",
+		  "@type": "Organization",
+		  "name": "Asogworld Travel & Tours",
+		  "url": "https://www.asogworldtravels.com.ng/",
+		  "logo": "https://www.asogworldtravels.com.ng/img/100.png",
+		  "sameAs": [
+			"https://www.facebook.com/asogworld",
+			"https://www.twitter.com/asogworld"
+		  ],
+		  "contactPoint": {
+			"@type": "ContactPoint",
+			"telephone": "+234-813-447-0225",
+			"contactType": "Customer Service"
+		  }
+		}
+		</script>
+		
 
 	<style>
 			.zoom-img {
