fest: added a new advert image

--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
 				<div class="offer_2m">
 					<div class="offer_2m1 position-relative">
 						<div class="offer_2mi">
-							<img src="img/1a.png"  alt="abc" class="w-100">
+							<img src="img/101.png"  alt="abc" class="w-100">
 						</div>
 					</div>
 				</div>
